Updated social container layout issue

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -24,9 +24,10 @@
 }
 .social-container {
   right: 0;
-  position: fixed;
+  position: absolute;
   margin-top: -28px;
-  margin-right: 16px;
+  margin-right: 4px;
+  padding-right: 20px;
 }
 a.social {
   margin: 0 4px;
